syntax = "proto3";

message JsHeapConfig {
    enum HeapType {
        SNAPSHOT = 0;
        TIMELINE = 1;
        // ALLOC_SAMPLE = 2;
    }
    int32 pid = 1;
    HeapType type = 2;
    uint32 interval = 3; // seconds
    bool capture_numeric_value = 4;
    bool track_allocations = 5;
}